tests/machine/x/c/cross_join_triple.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/cross_join_triple.c:18:3: error: conflicting types for ‘list_int’; have ‘struct <anonymous>’
   18 | } list_int;
      |   ^~~~~~~~
/workspace/mochi/tests/machine/x/c/cross_join_triple.c:8:3: note: previous declaration of ‘list_int’ with type ‘list_int’
    8 | } list_int;
      |   ^~~~~~~~
/workspace/mochi/tests/machine/x/c/cross_join_triple.c:19:17: error: conflicting types for ‘list_int_create’; have ‘list_int(int)’
   19 | static list_int list_int_create(int len) {
      |                 ^~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/cross_join_triple.c:9:17: note: previous definition of ‘list_int_create’ with type ‘list_int(int)’
    9 | static list_int list_int_create(int len) {
      |                 ^~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/cross_join_triple.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/cross_join_triple.c:73:51: warning: initialization of ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
   73 |         _t4.data[_t5] = (combosItem){.n = n, .l = l, .b = b};
      |                                                   ^
/workspace/mochi/tests/machine/x/c/cross_join_triple.c:73:51: note: (near initialization for ‘(anonymous).l’)

   1: #include <stdio.h>
